iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__mgt_commands_test_0_mds2.local_5.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "36001405e7ca5156565041c1a626ac2f6",
    "scsi80": "SLIO-ORG mgt1            e7ca5156-5650-41c1-a626-ac2f688929f5",
    "major": "8",
    "minor": "16",
    "devpath": "/devices/platform/host2/session1/target2:0:0/2:0:0:0/block/sdb",
    "size": 536870912,
    "filesystem_type": "mpath_member",
    "fs_uuid": "6323713067103715180",
    "fs_label": "mgt",
    "paths": [
      "/dev/disk/by-id/scsi-36001405e7ca5156565041c1a626ac2f6",
      "/dev/disk/by-id/wwn-0x6001405e7ca5156565041c1a626ac2f6",
      "/dev/disk/by-path/fc---lun-0",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-0",
      "/dev/disk/by-label/mgt",
      "/dev/disk/by-uuid/6323713067103715180",
      "/dev/sdb"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-0",
          "serial": "36001405e7ca5156565041c1a626ac2f6",
          "scsi80": "SLIO-ORG mgt1            e7ca5156-5650-41c1-a626-ac2f688929f5",
          "dm_name": "mpatha",
          "size": 536870912,
          "major": "253",
          "minor": "0",
          "filesystem_type": "zfs_member",
          "fs_uuid": "6323713067103715180",
          "fs_label": "mgt",
          "paths": [
            "/dev/mapper/mpatha",
            "/dev/disk/by-id/dm-name-mpatha",
            "/dev/disk/by-id/dm-uuid-mpath-36001405e7ca5156565041c1a626ac2f6",
            "/dev/disk/by-label/mgt",
            "/dev/disk/by-uuid/6323713067103715180",
            "/dev/dm-0"
          ],
          "children": [],
          "mount": null
        }
      }
    ]
  }
}
